[gd_scene load_steps=30 format=3 uid="uid://b31ewcd6dqao8"]

[ext_resource type="Texture2D" uid="uid://brfhan3sc0qtg" path="res://art/backback.png" id="1_r413r"]
[ext_resource type="Texture2D" uid="uid://iyi7c0pekk80" path="res://art/rocket.png" id="2_7h0l2"]
[ext_resource type="Texture2D" uid="uid://dcm6jsjqh2dvo" path="res://art/back.png" id="2_7t3o0"]
[ext_resource type="Texture2D" uid="uid://b353lwhgnvnxf" path="res://art/buildings/building_empty.png" id="2_ilsem"]
[ext_resource type="Texture2D" uid="uid://b365a33g5y7jx" path="res://art/shed.png" id="3_dghsx"]
[ext_resource type="Texture2D" uid="uid://bom4d4nk333kf" path="res://art/spr_template.png" id="3_h8soo"]
[ext_resource type="Texture2D" uid="uid://bi58klbr76lxf" path="res://art/solar2.png" id="4_irqrl"]
[ext_resource type="PackedScene" uid="uid://dwiwgchakn2ph" path="res://menu.tscn" id="4_mjxp4"]
[ext_resource type="Texture2D" uid="uid://qdik5yjlg3ui" path="res://art/solar.png" id="5_ewn3g"]
[ext_resource type="Texture2D" uid="uid://cwyhau4ysa4kl" path="res://art/buildings/selection.png" id="7_bwp3i"]
[ext_resource type="Script" path="res://TileMap.gd" id="7_hd27p"]
[ext_resource type="Texture2D" uid="uid://4eso5xmoteiw" path="res://art/buildings/building_lab.png" id="8_qxnhn"]
[ext_resource type="Texture2D" uid="uid://2fyvqurow5ly" path="res://art/buildings/building_farm2.png" id="9_mu1ff"]
[ext_resource type="Texture2D" uid="uid://cc7vj4glalfjg" path="res://art/buildings/building_power4.png" id="10_trl12"]
[ext_resource type="Texture2D" uid="uid://qhtj1kjlvfql" path="res://art/buildings/building_workshop1.png" id="11_byjl7"]
[ext_resource type="Texture2D" uid="uid://jxiqgrhqgg0c" path="res://art/UI/power.png" id="14_1nqwb"]
[ext_resource type="Texture2D" uid="uid://co24vyaoom5cn" path="res://art/UI/o2.png" id="15_n1u50"]
[ext_resource type="Texture2D" uid="uid://dr3cl12re12em" path="res://art/UI/food.png" id="16_dxx10"]
[ext_resource type="Script" path="res://Intro.gd" id="17_tgu3h"]
[ext_resource type="Script" path="res://Text1.gd" id="18_jea3i"]
[ext_resource type="Script" path="res://Questions1.gd" id="19_p80mc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yomah"]
texture = ExtResource("2_ilsem")
texture_region_size = Vector2i(160, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6m1rd"]
texture = ExtResource("7_bwp3i")
texture_region_size = Vector2i(160, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ernxl"]
texture = ExtResource("9_mu1ff")
texture_region_size = Vector2i(160, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i4otn"]
texture = ExtResource("8_qxnhn")
texture_region_size = Vector2i(160, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_elloc"]
texture = ExtResource("10_trl12")
texture_region_size = Vector2i(160, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dpwt5"]
texture = ExtResource("11_byjl7")
texture_region_size = Vector2i(160, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_hdg8p"]
tile_size = Vector2i(160, 64)
sources/0 = SubResource("TileSetAtlasSource_yomah")
sources/1 = SubResource("TileSetAtlasSource_6m1rd")
sources/2 = SubResource("TileSetAtlasSource_ernxl")
sources/3 = SubResource("TileSetAtlasSource_i4otn")
sources/4 = SubResource("TileSetAtlasSource_elloc")
sources/5 = SubResource("TileSetAtlasSource_dpwt5")

[sub_resource type="ButtonGroup" id="ButtonGroup_446fg"]
allow_unpress = true

[node name="World" type="Node"]

[node name="Decoration" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Decoration"]
texture = ExtResource("1_r413r")
centered = false

[node name="Sprite2D" type="Sprite2D" parent="Decoration/Sprite2D"]
position = Vector2(480, 64)
texture = ExtResource("2_7t3o0")

[node name="Rocket" type="Sprite2D" parent="Decoration"]
position = Vector2(848, 128)
texture = ExtResource("2_7h0l2")

[node name="Shed" type="Sprite2D" parent="Decoration"]
position = Vector2(480, 128)
texture = ExtResource("3_dghsx")

[node name="Solar2" type="Sprite2D" parent="Decoration"]
position = Vector2(640, 96)
texture = ExtResource("4_irqrl")
centered = false

[node name="Solar1" type="Sprite2D" parent="Decoration"]
position = Vector2(272, 128)
texture = ExtResource("5_ewn3g")

[node name="Solar3" type="Sprite2D" parent="Decoration"]
position = Vector2(128, 128)
texture = ExtResource("5_ewn3g")

[node name="Map" type="Node" parent="."]

[node name="TileMap" type="TileMap" parent="Map"]
tile_set = SubResource("TileSet_hdg8p")
format = 2
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
script = ExtResource("7_hd27p")

[node name="ConsumeTime" type="Timer" parent="Map/TileMap"]
wait_time = 2.0
autostart = true

[node name="GenerateTime" type="Timer" parent="Map/TileMap"]
wait_time = 7.0

[node name="Generate_energy" type="Timer" parent="Map/TileMap"]
autostart = true

[node name="Res" type="Node" parent="Map/TileMap"]

[node name="Food2" type="ProgressBar" parent="Map/TileMap"]
self_modulate = Color(1, 0, 0, 1)
show_behind_parent = true
offset_left = 32.0
offset_top = 192.0
offset_right = 144.0
offset_bottom = 219.0
step = 1.0
rounded = true

[node name="Sprite2D" type="Sprite2D" parent="Map/TileMap/Food2"]
texture = ExtResource("16_dxx10")
centered = false

[node name="Electricity2" type="ProgressBar" parent="Map/TileMap"]
modulate = Color(1, 1, 0, 1)
offset_left = 32.0
offset_top = 224.0
offset_right = 144.0
offset_bottom = 251.0

[node name="Sprite2D" type="Sprite2D" parent="Map/TileMap/Electricity2"]
texture = ExtResource("14_1nqwb")
centered = false

[node name="O3" type="ProgressBar" parent="Map/TileMap"]
self_modulate = Color(0, 0.835294, 0.972549, 1)
offset_left = 32.0
offset_top = 256.0
offset_right = 144.0
offset_bottom = 283.0

[node name="Sprite2D" type="Sprite2D" parent="Map/TileMap/O3"]
texture = ExtResource("15_n1u50")
centered = false

[node name="Rooms" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="Rooms"]
visible = false
layout_mode = 0
offset_left = 160.0
offset_top = 224.0
offset_right = 320.0
offset_bottom = 288.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("2_ilsem")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton3" type="TextureButton" parent="Rooms"]
visible = false
layout_mode = 0
offset_left = 160.0
offset_top = 352.0
offset_right = 320.0
offset_bottom = 416.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("2_ilsem")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton4" type="TextureButton" parent="Rooms"]
visible = false
layout_mode = 0
offset_left = 160.0
offset_top = 288.0
offset_right = 320.0
offset_bottom = 352.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("2_ilsem")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton2" type="TextureButton" parent="Rooms"]
visible = false
layout_mode = 0
offset_left = 320.0
offset_top = 224.0
offset_right = 480.0
offset_bottom = 288.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("2_ilsem")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton5" type="TextureButton" parent="Rooms"]
visible = false
layout_mode = 0
offset_left = 320.0
offset_top = 352.0
offset_right = 480.0
offset_bottom = 416.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("2_ilsem")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton6" type="TextureButton" parent="Rooms"]
visible = false
layout_mode = 0
offset_left = 320.0
offset_top = 288.0
offset_right = 480.0
offset_bottom = 352.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("2_ilsem")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton7" type="TextureButton" parent="Rooms"]
visible = false
layout_mode = 0
offset_left = 480.0
offset_top = 224.0
offset_right = 640.0
offset_bottom = 288.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("2_ilsem")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton8" type="TextureButton" parent="Rooms"]
visible = false
layout_mode = 0
offset_left = 480.0
offset_top = 352.0
offset_right = 640.0
offset_bottom = 416.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("2_ilsem")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton9" type="TextureButton" parent="Rooms"]
visible = false
layout_mode = 0
offset_left = 480.0
offset_top = 288.0
offset_right = 640.0
offset_bottom = 352.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("2_ilsem")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton10" type="TextureButton" parent="Rooms"]
visible = false
layout_mode = 0
offset_left = 640.0
offset_top = 224.0
offset_right = 800.0
offset_bottom = 288.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("2_ilsem")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton11" type="TextureButton" parent="Rooms"]
visible = false
layout_mode = 0
offset_left = 640.0
offset_top = 352.0
offset_right = 800.0
offset_bottom = 416.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("2_ilsem")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton12" type="TextureButton" parent="Rooms"]
visible = false
layout_mode = 0
offset_left = 640.0
offset_top = 288.0
offset_right = 800.0
offset_bottom = 352.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("2_ilsem")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="MenuUI" parent="." instance=ExtResource("4_mjxp4")]
offset_left = 32.0
offset_top = 32.0
offset_bottom = -444.0

[node name="Panel2" type="Panel" parent="."]
visible = false
offset_top = 432.0
offset_right = 960.0
offset_bottom = 544.0
metadata/_edit_lock_ = true

[node name="TextureButton12" type="TextureButton" parent="Panel2"]
layout_mode = 0
offset_left = 96.0
offset_top = 16.0
offset_right = 256.0
offset_bottom = 80.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("8_qxnhn")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton12" type="TextureButton" parent="Panel2/TextureButton12"]
layout_mode = 0
offset_left = 192.0
offset_right = 352.0
offset_bottom = 64.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("9_mu1ff")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton13" type="TextureButton" parent="Panel2/TextureButton12"]
layout_mode = 0
offset_left = 416.0
offset_right = 576.0
offset_bottom = 64.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("10_trl12")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="TextureButton12" type="TextureButton" parent="Panel2/TextureButton12/TextureButton13"]
layout_mode = 0
offset_left = 192.0
offset_right = 352.0
offset_bottom = 64.0
toggle_mode = true
button_group = SubResource("ButtonGroup_446fg")
texture_normal = ExtResource("11_byjl7")
texture_pressed = ExtResource("3_h8soo")
ignore_texture_size = true

[node name="Panel" type="Panel" parent="."]
z_index = 2
offset_left = 192.0
offset_top = 32.0
offset_right = 768.0
offset_bottom = 448.0
script = ExtResource("17_tgu3h")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 544.0
offset_bottom = 384.0
text = "You have been placed in charge of starting a new colony on a foreign planet. The necessary preparations for a human exploration campaign have already been conducted.

Your job is to make sure your crew and you survive.

Every day that passes drains resources from your reserves. You must find a way to balance the threats this planet and the needs of your people. If mission control hears of imminent failure, the mission will be aborted and colony must be evacuated immediately.


Good luck, Captain."

[node name="Questions1" type="Panel" parent="."]
z_index = 2
offset_left = 192.0
offset_top = 160.0
offset_right = 768.0
offset_bottom = 416.0
script = ExtResource("19_p80mc")

[node name="RichTextLabel" type="RichTextLabel" parent="Questions1"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 544.0
offset_bottom = 288.0
bbcode_enabled = true
text = "What is a major challenge that future space explorers may face during long-duration missions to distant worlds?

a) Lack of advanced propulsion systems
b) Limited availability of space resources
c) Difficulty in growing food in microgravity
d) Potential psychological effects on astronauts

[i]Press A, B, C, or D to answer[/i]"

[node name="Text1" type="Panel" parent="."]
z_index = 2
offset_left = 160.0
offset_top = 32.0
offset_right = 800.0
offset_bottom = 448.0
script = ExtResource("18_jea3i")

[node name="RichTextLabel" type="RichTextLabel" parent="Text1"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 608.0
offset_bottom = 384.0
text = "One of the persistent health issues confronting astronauts today is the impact of microgravity on their musculoskeletal system. In the weightlessness of space, bones and muscles experience reduced stress, leading to bone density loss and muscle atrophy. Though exercise regimens are rigorously enforced on spacecraft and space stations, maintaining optimal musculoskeletal health remains a complex puzzle.

Space, while vast and wondrous, can also be isolating, and this can have profound psychological effects on astronauts. Exploring ways to enhance crew cohesion, providing psychological support, and developing recreational activities are essential components of future space missions. Moreover, the confined spaces, and the constant presence of the void outside the spacecraft can lead to feelings of isolation and stress. Initiatives focusing on mental health support and recreational activities are implemented to counteract these psychological effects.
"

[node name="Quest_Time" type="Timer" parent="Text1"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="TimerQuestion1" type="Timer" parent="Text1"]

[connection signal="timeout" from="Map/TileMap/ConsumeTime" to="Map/TileMap" method="_on_consume_time_timeout"]
[connection signal="timeout" from="Map/TileMap/GenerateTime" to="Map/TileMap" method="_on_generate_time_timeout"]
[connection signal="timeout" from="Map/TileMap/Generate_energy" to="Map/TileMap" method="_on_generate_energy_timeout"]
[connection signal="timeout" from="Text1/Quest_Time" to="Questions1" method="_on_quest_time_timeout"]
[connection signal="timeout" from="Text1/TimerQuestion1" to="Text1" method="_on_timer_question_1_timeout"]
